<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.crud.pasien.DaftarPasienActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbDafPasien"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgBackDaftarPasien"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/back_icon" />

            <TextView
                android:id="@+id/txtTbPasien"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/title_daftar_pasien"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgBackDaftarPasien"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbDafPasien">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_ktp" />

        <EditText
            android:id="@+id/txtDaftarNoKtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_ktp"
            android:ems="10"
            android:hint="@string/hint_no_ktp"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_pasien" />

        <EditText
            android:id="@+id/txtDaftarNamaPasien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/masukan_nama_pasien"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alamat" />

        <EditText
            android:id="@+id/txtDaftarAlamatPasien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_home"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <Spinner
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/spinJenkelPasien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/jenkel_arrays"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/umur" />

        <EditText
            android:id="@+id/txtDaftarUmurPasien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/masukan_umur" />

        <Spinner
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/spinStatusPasien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/status_arrays"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_telp" />

        <EditText
            android:id="@+id/txtDaftarTelpPasien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_phone"
            android:ems="10"
            android:inputType="phone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_ibu" />

        <EditText
            android:id="@+id/txtNamaIbuPasien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_akun"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/masukan_nama_ibu"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_pasangan" />

        <EditText
            android:id="@+id/txtDaftarPasanganPasien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_akun"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/pasangan"/>

        <Button
            android:id="@+id/btnDaftarinPasien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/btn_daftar_pasien"
            android:layout_marginBottom="40dp"/>

    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>