<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/purple_200_80"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/from"/>

            <EditText
                android:id="@+id/btnMin"
                android:layout_gravity="center"
                android:padding="8dp"
                android:background="@drawable/border_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:textSize="14sp"
                android:hint="@string/format_tanggal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/from"
                android:visibility="invisible"/>

            <ImageView
                android:contentDescription="@string/image_filter"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_event_24" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/to"/>

            <EditText
                android:id="@+id/btnMax"
                android:layout_marginBottom="10dp"
                android:padding="8dp"
                android:background="@drawable/border_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:editable="false"
                android:hint="@string/format_tanggal"/>

            <TextView
                android:clickable="false"
                android:id="@+id/btnApplyFilter"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go"
                android:textSize="22sp"
                android:background="@color/white"
                android:padding="2dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>